--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack-dev-server": "^3.1.11"
   },
   "dependencies": {
+    "and": "0.0.3",
     "babel-core": "^6.22.1",
     "babel-preset-airbnb": "^2.1.1",
     "babel-preset-env": "^1.7.0",
@@ -32,6 +33,7 @@
     "react-redux": "^5.0.2",
     "redux": "^4.0.0",
     "sinon": "^6.1.4",
+    "start": "^5.1.0",
     "webpack": "^3.6.0"
   },
   "scripts": {
